feat(thread): apply virtual thread per symbol